<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/order_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="You choose: "
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/order_textview"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/labelSize"
        android:text="Name: ">
    </TextView>

    <EditText
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:ems="10"
        android:hint="@string/enter_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@id/name_label"
        app:layout_constraintBaseline_toBaselineOf="@id/name_label"
        >
    </EditText>

    <TextView
        android:id="@+id/address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        app:layout_constraintBaseline_toBaselineOf="@id/address_text"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/labelSize"
        android:text="Address: ">
    </TextView>
    <EditText
        android:id="@+id/address_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:lines="2"
        android:ems="10"
        android:hint="@string/enter_address_hint"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toEndOf="@id/address_label"
        app:layout_constraintTop_toBottomOf="@id/name_text"
        >
    </EditText>

    <TextView
        android:id="@+id/phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@id/address_text"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/labelSize"
        android:text="Phone: ">
    </TextView>
    <EditText
        android:id="@+id/phone_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:ems="10"
        android:hint="@string/enter_phone_hint"
        android:inputType="phone"
        app:layout_constraintStart_toEndOf="@id/phone_label"
        app:layout_constraintBaseline_toBaselineOf="@id/phone_label"
        >
    </EditText>

    <TextView
        android:id="@+id/note_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        app:layout_constraintBaseline_toBaselineOf="@id/note_text"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/labelSize"
        android:text="Note: ">
    </TextView>
    <EditText
        android:id="@+id/note_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:ems="10"
        android:lines="2"
        android:hint="@string/enter_note_hint"
        android:inputType="textMultiLine|textCapSentences"
        app:layout_constraintStart_toEndOf="@id/note_label"
        app:layout_constraintTop_toBottomOf="@id/phone_text"
        >
    </EditText>

    <TextView
        android:id="@+id/delivery_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="Choose a delivery method:"
        android:textSize="@dimen/labelSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note_text"
        >
    </TextView>
    <RadioGroup
        android:id="@+id/delivery_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/delivery_label"
        app:layout_constraintStart_toStartOf="parent">
        <RadioButton
            android:id="@+id/sameday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Same day messenger service."
            android:checked="true"
            >
        </RadioButton>
        <RadioButton
            android:id="@+id/nextday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next day ground delivery."
            >
        </RadioButton>
        <RadioButton
            android:id="@+id/pickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pick up."
            >
        </RadioButton>

    </RadioGroup>

    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>